--- a/frontend/src/CSS/Banner.css
+++ b/frontend/src/CSS/Banner.css
@@ -5,14 +5,19 @@
   overflow: hidden;
 }
 
+.banner-slide-container {
+  display: flex;
+  transition: transform 2s ease-in; /* Smooth transition */
+}
+
 .banner-slide {
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
   display: flex;
   justify-content: center;
-  align-items: flex-end; /* Align items to the bottom */
+  align-items: flex-end;
   position: relative;
 }
 
@@ -22,26 +27,26 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 300px; /* Adjust the height of the shadow as needed */
+  height: 300px;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5), transparent);
 }
 
 .banner-content {
   color: white;
   text-align: center;
-  z-index: 1; /* Ensure the content is above the shadow */
-  margin-bottom: 50px; /* Adjust the margin as needed */
+  z-index: 1;
+  margin-bottom: 50px;
 }
 
 .banner-content h1 {
-  font-size: 3rem; /* Adjust the font size as needed */
+  font-size: 3rem;
   margin-bottom: 1rem;
 }
 
 .banner-buttons {
   display: flex;
   gap: 1rem;
-  justify-content: center; /* Center the buttons */
+  justify-content: center;
 }
 
 .banner-button {
@@ -53,12 +58,12 @@
 }
 
 .banner-button:first-child {
-  background-color: #3b82f6; /* Adjust color */
+  background-color: #3b82f6;
   color: white;
 }
 
 .banner-button:last-child {
-  background-color: #ffffff; /* Adjust color */
+  background-color: #ffffff;
   color: black;
 }
 
@@ -83,5 +88,5 @@
 }
 
 .banner-arrow:hover {
-  color: #3b82f6; /* Adjust hover color */
+  color: #3b82f6;
 }
