--- a/frontend/src/CSS/Header.css
+++ b/frontend/src/CSS/Header.css
@@ -17,11 +17,14 @@
 }
 
 .logo {
+  margin-top: 10px;
   font-size: 35px;
+  width: 200px;
+  height: 50px;
   font-weight: bold;
-  color: #e50914;
+  display: flex;
+  align-items: center;
 }
-
 .nav {
   display: flex;
   align-items: center;
