--- a/frontend/src/CSS/Header.css
+++ b/frontend/src/CSS/Header.css
@@ -4,11 +4,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #1a1a1a;
+  background-color: rgb(17, 17, 43);
   padding: 10px 20px;
   color: #ffffff;
   z-index: 1000000;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 4px 8px rgba(59, 59, 171,0.4);
   position: fixed; /* Ensure the header is positioned correctly */
   width: 100%;
   top: 0; /* Position at the top */
